@@ -111,6 +111,8 @@ function upgrade_to_0_8_8() {
 
 
 
+	/* add rrd_compute_rpn for data source items */
+	db_install_execute("0.8.7a", "ALTER TABLE `data_template_rrd` ADD COLUMN `t_rrd_compute_rpn` CHAR(2) DEFAULT NULL AFTER `rrd_minimum`, ADD COLUMN `rrd_compute_rpn` VARCHAR(150) DEFAULT '' AFTER `t_rrd_compute_rpn`;");
 
 	/* add --alt-y-grid as an option */
 	db_install_execute("0.8.8", "ALTER TABLE `graph_templates_graph` ADD COLUMN `t_alt_y_grid` CHAR(2) DEFAULT 0 AFTER `auto_scale_rigid`, ADD COLUMN `alt_y_grid` CHAR(2) DEFAULT '' AFTER `t_alt_y_grid`;");
@@ -235,7 +237,18 @@ function upgrade_to_0_8_8() {
 	db_install_execute("0.8.8", "INSERT INTO `plugin_realms` VALUES (1, 'internal', 'plugins.php', 'Plugin Management'");
 
 	/* wrong lower limit for generic OID graph template */
-	db_install_execute("0.8.7c", "UPDATE graph_templates_graph SET lower_limit='0', vertical_label='' WHERE id=47");
+	db_install_execute("0.8.8", "UPDATE graph_templates_graph SET lower_limit='0', vertical_label='' WHERE id=47");
+
+	/* rename templates */
+	/* graph templates, ucd/net */
+	db_install_execute("0.8.8", "UPDATE graph_templates SET name='SNMP - Available Disk Space' WHERE name='ucd/net Available Disk Space'");
+	db_install_execute("0.8.8", "UPDATE graph_templates SET name='SNMP - CPU Usage' WHERE name='ucd/net CPU Usage'");
+	db_install_execute("0.8.8", "UPDATE graph_templates SET name='SNMP - Available Disk Space' WHERE name='ucd/net Available Disk Space'");
+	db_install_execute("0.8.8", "UPDATE graph_templates SET name='SNMP - Available Disk Space' WHERE name='ucd/net Available Disk Space'");
+	/* graph templates, HOST MIB */
+	/* data templates, ucd/net */
+	/* data templates, HOST MIB */
+	/* host templates */
 
 }
 ?>
